Workshop 4 - in progress HTML + joke list